# fin-proto-cpp

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  Makefile  build.sh  readme.md
include/: bjse_binary.hpp  bytebuf.h  bytebuf.hpp  codec.h  codec.hpp  message_factory.hpp  rc_binary.hpp  root_packet.hpp  sse_binary.hpp  szse_binary.hpp
sample-bin/: Makefile
sample-bin/messages/: basic_packet.hpp  empty_packet.hpp  nested_packet.hpp  root_packet.hpp  string_packet.hpp  sub_packet.hpp
src/: bytebuf.cpp
sse-bin/: Makefile
test/: bjse_binary_test.cpp  bytebuf_test.cpp  codec_test.cpp  rc_binary_test.cpp  root_packet_test.cpp  root_packet_test_1.cpp  sse_binary_test.cpp  szse_binary_test.cpp
